# mlx-plastic-rank

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  main.py  mypy.ini  plastic_rank.py  pyproject.toml  ruff.toml
.github/: dependabot.yml  pull_request_template.md
codex/: decisions.md  runbook.md
data/: README.md
docs/: poprank_ablation_reports.md  poprank_dependency_boundary.md  poprank_memory_profiles.md  poprank_rank_budget.md  poprank_repo_audit.md
scripts/: bench_memory.py  compress_gemma2_mlx.py  compress_llm_mlx.py  demo_mlx_lm_pack.py  demo_plasticity_blocks.py  domain_router_runtime.py  fault_codes_extract.py  fault_codes_generate_check.py  gemma4_smoke.py  industrybench_extract.py  pop_polynomial_probe.py  text_to_sql_extract.py
tests/: conftest.py  test_ablation.py  test_bakeoff.py  test_bench_shapes.py  test_cli_helpers.py  test_compress_cli.py  test_dataset_helpers.py  test_dependency_boundary.py  test_device_profiles.py  test_domain_pack_proof.py  test_domain_router.py  test_export_roundtrip.py  test_fault_codes_extract.py  test_fault_codes_generate_check.py  test_gemma4_smoke.py  test_heavy_packs.py  test_industrybench_extract.py  test_lora_wrapper.py  test_lowrank_paths.py  test_main.py  test_manager_adapters.py  test_manager_logging.py  test_pack_inspection.py  test_pack_manager_validation.py  test_packs_cli_parser.py  test_plastic_rank.py  test_pop_polynomial_probe.py  test_quantize_factors.py  test_rank_budget.py  test_rank_layer_cycle.py  test_rank_ledger.py  test_rank_select.py  (+3 more)
(+43 files in other folders)
